--- a/.classpath
+++ b/.classpath
@@ -27,8 +27,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="gral-core-0.10.jar"/>
-	<classpathentry kind="lib" path="VectorGraphics2D-0.9.1.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry exported="true" kind="lib" path="gral-core-0.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="VectorGraphics2D-0.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="jcommon-1.0.23.jar"/>
+	<classpathentry exported="true" kind="lib" path="jfreechart-1.0.19.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
