--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry exported="true" kind="lib" path="jcommon-1.0.23.jar"/>
 	<classpathentry exported="true" kind="lib" path="jfreechart-1.0.19.jar"/>
 	<classpathentry kind="lib" path="/home/user/下载/mysql-connector-java-5.1.25-bin.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-java-5.1.25-bin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
