presentation & bl merge

--- a/.classpath
+++ b/.classpath
@@ -28,11 +28,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry exported="true" kind="lib" path="gral-core-0.10.jar"/>
-	<classpathentry exported="true" kind="lib" path="VectorGraphics2D-0.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="jcommon-1.0.23.jar"/>
 	<classpathentry exported="true" kind="lib" path="jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="/home/user/下载/mysql-connector-java-5.1.25-bin.jar"/>
-	<classpathentry kind="lib" path="mysql-connector-java-5.1.25-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="mysql-connector-java-5.1.25-bin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
