--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/java/PO/MatchPO.java=UTF-8
 encoding//src/main/java/PO/PlayerTechMPO.java=UTF-8
 encoding//src/main/java/PO/PlayerTechPO.java=UTF-8
 encoding//src/main/java/bussinesslogic/playerbl/PlayerTech.java=UTF-8
